Make changes in order to be able to deploy to Maven Central from local